src-tauri/tests/snapshots/parsers_snapshot__kimi_code_detail.snap
---
source: tests/parsers_snapshot.rs
expression: detail
---
{
  "summary": {
    "id": "session_kimi_001",
    "agent_type": "kimi_code",
    "folder_path": "/tmp/demo",
    "folder_name": "demo",
    "title": "build the app",
    "started_at": "[ts]",
    "ended_at": "[ts]",
    "message_count": 2,
    "model": "kimi-k2.7-code",
    "git_branch": null
  },
  "turns": [
    {
      "id": "turn-0",
      "role": "user",
      "blocks": [
        {
          "type": "text",
          "text": "build the app"
        }
      ],
      "timestamp": "[ts]",
      "completed_at": "[ts]"
    },
    {
      "id": "turn-1",
      "role": "assistant",
      "blocks": [
        {
          "type": "thinking",
          "text": "inspect the entry file first"
        }
      ],
      "timestamp": "[ts]",
      "duration_ms": 1000,
      "completed_at": "[ts]"
    },
    {
      "id": "turn-2",
      "role": "assistant",
      "blocks": [
        {
          "type": "tool_use",
          "tool_use_id": "Read_0",
          "tool_name": "Read",
          "input_preview": "{\"file_path\":\"/tmp/demo/app.ts\"}"
        },
        {
          "type": "tool_result",
          "tool_use_id": "Read_0",
          "output_preview": "{\"start_line\":1,\"content\":\"export const x = 1\\nexport const y = 2\"}",
          "is_error": false
        }
      ],
      "timestamp": "[ts]",
      "duration_ms": 2000,
      "completed_at": "[ts]"
    },
    {
      "id": "turn-3",
      "role": "assistant",
      "blocks": [
        {
          "type": "text",
          "text": "The app exports x and y."
        }
      ],
      "timestamp": "[ts]",
      "usage": {
        "input_tokens": 1260,
        "output_tokens": 120,
        "cache_creation_input_tokens": 0,
        "cache_read_input_tokens": 2800
      },
      "duration_ms": 1000,
      "completed_at": "[ts]"
    }
  ],
  "session_stats": {
    "total_usage": {
      "input_tokens": 1260,
      "output_tokens": 120,
      "cache_creation_input_tokens": 0,
      "cache_read_input_tokens": 2800
    },
    "total_tokens": 4180,
    "total_duration_ms": 4000,
    "context_window_used_tokens": 2060,
    "context_window_max_tokens": 262144,
    "context_window_usage_percent": 0.78582763671875
  }
}
